# opensre

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  README.md  SETUP.md  bandit-report.json  docker-compose.rabbitmq.yml  index.html  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-labels-windows.yml  ci.yml  contributors.yml  release.yml  tracer-demo.yml  weekly-synthetic-and-deps-canary.yml
.understand-anything/: .understandignore  domain-graph.json  fingerprints.json  knowledge-graph.json  meta.json
app/: config.py  llm_reasoning_effort.py  main.py  output.py  webapp.py
app/agents/: __init__.py  conflicts.py  lifecycle.py  probe.py
app/analytics/: cli.py  events.py  provider.py
app/auth/: auth.py  jwt_auth.py
app/cli/: __main__.py  constants.py  deploy.py  deploy_test.py  health_view.py  investigate.py  investigate_input.py  langsmith_deploy.py  update.py
app/cli/commands/: __init__.py  deploy.py  doctor.py  general.py  onboard.py  remote.py  remote_health.py  tests.py
app/cli/interactive_shell/: action_executor.py  action_planner.py  agent_actions.py  agents_view.py  banner.py  cli_agent.py  cli_help.py  cli_reference.py  commands.py  config.py  docs_reference.py  execution_policy.py  follow_up.py  grounding_diagnostics.py  history.py  intent_parser.py  llm_intent_classifier.py  loaders.py  loop.py  prompt_rules.py  prompt_surface.py  (+8 more)
app/entrypoints/: mcp.py
app/guardrails/: audit.py  engine.py
app/integrations/: _catalog_impl.py  _verification_adapters.py  airflow.py  azure_sql.py  betterstack.py  bitbucket.py  catalog.py  cli.py  clickhouse.py  config_models.py  daily_update.py  effective_models.py  github_mcp.py  gitlab.py  gitlab_test.py  kafka.py  mariadb.py  mcp_streamable_http_compat.py  models.py  mongodb.py  mongodb_atlas.py  mysql.py  openclaw.py  postgresql.py  posthog.py  rabbitmq.py  registry.py  selectors.py  sentry.py  store.py  trello.py  vercel_incidents.py  verify.py
app/masking/: context.py  detectors.py  policy.py
app/nodes/: __init__.py  chat.py
app/pipeline/: graph.py  routing.py  runners.py
app/remote/: client.py  ops.py  renderer.py  runtime_alert.py  server.py  slack_context.py  stream.py  system_metrics.py  vercel_poller.py
app/sandbox/: runner.py
app/services/: chat_sdk_adapter.py  env.py  lambda_client.py  llm_client.py
app/state/: agent_state.py  factory.py  types.py
app/tools/: base.py  registered_tool.py  tool_decorator.py
app/types/: __init__.py  chat.py  evidence.py
app/utils/: discord_delivery.py  ingest_delivery.py  sentry_sdk.py  slack_delivery.py  telegram_delivery.py
docs/: betterstack.mdx  docs.json  intergrations-overview.mdx  llm-providers.mdx  mongodb.mdx  multi-instance-integrations.mdx  mysql.mdx  postgresql.mdx  rabbitmq.mdx
docs-mintlify/: docs.json
docs/benchmarks/: README.md
docs/daily-updates/: 2026-04-03.md  2026-04-05.mdx  2026-04-09.mdx  2026-04-15.mdx  2026-04-17.mdx  2026-04-20.mdx  2026-04-21.mdx  2026-04-22.mdx  2026-04-23.mdx  2026-04-24.mdx  2026-04-25.mdx  2026-05-04.mdx  overview.mdx
packaging/: opensre.spec
scripts/: regen_splash.js
tests/: AGENTS.md  cli_smoke_test.py  conftest.py  test_bug_fixes_e2e.py  test_config.py  test_devcontainer.py  test_dockerfile.py  test_elasticsearch_client.py  test_mariadb_integration.py  test_mongodb_atlas_integration.py  test_mongodb_integration.py  test_openclaw_integration.py  test_sentry_init.py  test_version.py  test_webapp.py
tests/agents/: test_lifecycle.py
tests/analytics/: test_provider.py
tests/chaos_engineering/: README.md  paths.py
tests/cli/: test_deploy.py  test_discover.py  test_doctor.py  test_exception_reporting.py  test_health_view.py  test_interactive.py  test_investigate_service_flag.py  test_layout.py  test_main.py  test_mariadb_cli.py  test_tests_command_synthetic_flags.py  test_update.py  test_wizard_main.py
tests/entrypoints/: test_mcp.py
tests/integrations/: test_azure_sql.py  test_catalog_multi_instance.py  test_config_validation.py  test_env_multi_instance.py  test_mariadb.py  test_notion_client.py  test_rabbitmq.py  test_store.py  test_store_migration.py  test_store_multi_instance.py  test_trello.py  test_vercel_incidents.py  test_verify.py
tests/masking/: test_context.py  test_integration_with_k8s_fixture.py
tests/nodes/: test_alertmanager_evidence.py  test_chat_protocol.py  test_vercel_github_rca_support.py
tests/pipeline/: __init__.py  test_graph_adapt_window_wiring.py  test_graph_agent_incident_wiring.py
tests/remote/: test_discord_interactions.py  test_ops.py  test_ops_fetch_logs.py  test_runtime_alert.py  test_server.py  test_server_utils.py  test_slack_context.py
tests/sandbox/: test_runner.py
tests/services/: test_chat_sdk_adapter_comprehensive.py  test_coralogix_client.py  test_llm_client.py
tests/synthetic/: k8s_schemas.py  schemas.py
tests/test_case_mwaa/: __init__.py  test_orchestrator.py  trigger_failure.py  use_case.py  validation.py
tests/test_guardrails/: test_engine.py  test_llm_integration.py
tests/tools/: conftest.py  test_azure_sql_current_queries_tool.py  test_azure_sql_server_status_tool.py  test_azure_sql_slow_queries_tool.py  test_azure_sql_wait_stats_tool.py  test_cloudwatch_batch_metrics_tool.py  test_git_deploy_timeline_tool.py  test_github_file_contents_tool.py  test_github_search_code_tool.py  test_grafana_logs_tool.py  test_grafana_metrics_tool.py  test_grafana_traces_tool.py  test_integration_wave_tools.py  test_jira_add_comment_tool.py  test_mariadb_innodb_status_tool.py  test_mariadb_process_list_tool.py  test_mariadb_replication_tool.py  test_mariadb_slow_queries_tool.py  test_mariadb_status_tool.py  test_mysql_current_processes_tool.py  test_openclaw_mcp_tool.py  test_postgresql_current_queries_tool.py  test_postgresql_slow_queries_tool.py  test_registry.py  test_run_diagnostic_code_tool.py  test_sentry_search_issues_tool.py  test_victoria_logs_tool.py
tests/utils/: conftest.py  test_discord_delivery.py  test_telegram_delivery.py
(+307 files in other folders)
